# catructure

./: Cargo.toml  LICENSE  README.md  catructure.toml
.github/workflows/: rust.yml
assets/: test.nbt
src/: ascii_tree.rs  command.rs  error.rs  main.rs  model.rs
src/command/: check.rs
src/model/: config.rs  structure.rs
