[package]
name = "catructure"
version = "0.1.1"
edition = "2021"
author = "tsutoringo"
description = "A simple minecraft structure checker()"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
fastnbt = "2.4.4"
flate2 = "1.0.28"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.51"
toml = "0.8.8"
